# chain_peeper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: watchlist.yaml
scripts/: com.local.chain-peeper.snapshot.plist.example  ping_ibkr.py  snapshot_daily.py
src/chain_peeper/: __init__.py  config.py  watchlist.py
src/chain_peeper/analytics/: __init__.py  clusters.py  iv.py  yields.py
src/chain_peeper/dashboard/: app.py
src/chain_peeper/ibkr/: __init__.py  chain_fetcher.py  connection.py
src/chain_peeper/storage/: __init__.py  duckdb_store.py
